Изменено логирование контроллеров. Теперь за это отвечает класс RequestLoggingConfig, используемый в качестве бина spring boot